# lecture-security_engineering

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
sample-03/: .babelrc  .gitignore  package.json  pnpm-lock.yaml  webpack.common.js  webpack.config.js
sample-03-rs/: Cargo.toml  README.md
sample-03-rs/src/: config.rs  crypto.rs  error.rs  key.rs  main.rs
sample-03/src/: encrypt-browser.js  encrypt-node.js  encrypt-universal.js  post-get-browser.html  post-get-node.js  registered-data-list.html
sample-03/src/common/: env.js  index.js  key.js  post-get.js
sample-04/: package.json  pnpm-lock.yaml  webpack.config.js
sample-04-rs/: Cargo.toml  README.md
sample-04-rs/src/: config.rs  crypto.rs  key.rs  main.rs
sample-04/data/: db.template.json
sample-04/src/: derive-key.js  encrypt.js  index.js  post-get-browser.html  post-get-node.js  post-get.js
sample-04/src/util/: comm.js  env.js  params.js  pkcs7.js
sample-05/: package.json  pnpm-lock.yaml  webpack.common.js  webpack.config.js
sample-05-rs/: Cargo.toml  README.md
sample-05-rs/src/: config.rs  crypto.rs  ecc.rs  error.rs  key.rs  main.rs  rsa.rs  util.rs
sample-05/src/: commands-browser.html  commands-node.js  derive-key.js  encryptAES.js  index.js  test-apis.js
sample-05/src/util/: env.js  format.js
sample-06/: .babelrc  package.json  pnpm-lock.yaml  renovate.json  webpack.baseconfig.json  webpack.common.js  webpack.dev.js
sample-06-rs/: Cargo.toml  README.md
sample-06-rs/src/: config.rs  ecc.rs  hash.rs  main.rs  rsa.rs  util.rs
sample-06/src/: commands-browser.html  commands-node.js  index.js  test-apis.js
sample-06/src/util/: env.js  format.js
sample-07-09/: .eslintrc.json  karma.conf.js  package.json  sample.crt  tsconfig.json  webpack.prod.js
sample-07-09-rs/: Cargo.toml  README.md  start.sh
sample-07-09-rs/assets/: auth.js  fido2testlib.bundle.js  index.html
sample-07-09-rs/docker/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  run.sh
sample-07-09-rs/frontend-lib/: README.md  package.json  sample.html  webpack.baseconfig.js  webpack.config.js
sample-07-09-rs/frontend-lib/src/: assertion.ts  env.ts  util.ts
sample-07-09-rs/src/: constants.rs  error.rs  log.rs  main.rs  startup.rs  webauthn.rs
sample-07-09/src/: attestation.ts  credential.ts  index.ts
sample-07-09/test/: credential-params.ts  misc.spec.ts  prepare.ts  test.spec.ts
sample-08-09/: karma.conf.js  package.json  webpack.common.js
sample-08-09/src/: attestation.ts  util.ts
sample-08-09/test/: misc.spec.ts
sample-08-10/: karma.conf.js  package.json
sample-08-10/src/: attestation.ts  util.ts
sample-08-10/test/: credential-params.ts  misc.spec.ts
