[package]
name = "cli03"
authors = ["Jun Kurihara"]
description = "Rust version of sample-03"
repository = "https://github.com/junkurihara/lecture-security_engineering"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
base64 = "0.21.4"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.4.6", features = ["std", "cargo", "wrap_help", "derive"] }
pbkdf2 = "0.12.2"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.33.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }

[dev-dependencies]
hex-literal = "0.4.1"
