[package]
name = "cli04"
authors = ["Jun Kurihara"]
description = "Rust version of sample-04"
repository = "https://github.com/junkurihara/lecture-security_engineering"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.79"
base64 = "0.22.0"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.4.18", features = ["std", "cargo", "wrap_help", "derive"] }
hkdf = "0.12.4"
pbkdf2 = "0.12.2"
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.35.1", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }

[dev-dependencies]
hex-literal = "0.4.1"
