[package]
name = "cli04"
authors = ["Jun Kurihara"]
description = "Rust version of sample-04"
repository = "https://github.com/junkurihara/lecture-security_engineering"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.91"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.5.20", features = ["std", "cargo", "wrap_help", "derive"] }
hkdf = "0.12.4"
pbkdf2 = "0.12.2"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.41.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }

[dev-dependencies]
hex-literal = "0.4.1"
