[package]
name = "cli04"
authors = ["Jun Kurihara"]
description = "Rust version of sample-04"
repository = "https://github.com/junkurihara/lecture-security_engineering"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.5.48", features = [
  "std",
  "cargo",
  "wrap_help",
  "derive",
] }
hkdf = "0.12.4"
pbkdf2 = "0.12.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.47.1", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }

[dev-dependencies]
hex-literal = "1.0.0"
