[package]
name = "cli05"
authors = ["Jun Kurihara"]
description = "Rust version of sample-05"
repository = "https://github.com/junkurihara/lecture-security_engineering"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.4.6", features = ["std", "cargo", "wrap_help", "derive"] }
hkdf = "0.12.3"
rand = "0.8.5"
rsa = { version = "0.9.2" }
serde = { version = "1.0.189", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.33.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
hex = "0.4.3"
p256 = "0.13.2"
elliptic-curve = { version = "0.13.6", features = ["sec1", "pkcs8", "ecdh"] }
p384 = "0.13.0"
rmp-serde = "1.1.2"

[dev-dependencies]
hex-literal = "0.4.1"
base64 = "0.21.4"
