[package]
name = "cli05"
authors = ["Jun Kurihara"]
description = "Rust version of sample-05"
repository = "https://github.com/junkurihara/lecture-security_engineering"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.5.53", features = ["std", "cargo", "wrap_help", "derive"] }
hkdf = "0.12.4"
rand = "0.9.2"
rsa = { version = "0.9.9" }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
hex = "0.4.3"
p256 = "0.13.2"
elliptic-curve = { version = "0.13.8", features = ["sec1", "pkcs8", "ecdh"] }
p384 = "0.13.1"
rmp-serde = "1.3.0"

[dev-dependencies]
hex-literal = "1.1.0"
base64 = "0.22.1"
