[package]
name = "cli06"
authors = ["Jun Kurihara"]
description = "Rust version of sample-06"
repository = "https://github.com/junkurihara/lecture-security_engineering"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = [
  "std",
  "cargo",
  "wrap_help",
  "derive",
] }
rand = "0.9.2"
rsa = { version = "0.9.8" }
sha2 = "0.10.9"
hex = "0.4.3"
p256 = { version = "0.13.2", features = ["ecdsa"] }
elliptic-curve = { version = "0.13.8", features = ["sec1", "pkcs8", "ecdh"] }
p384 = { version = "0.13.1", features = ["ecdsa"] }
sha3 = "0.10.8"
digest = "0.10.7"
hmac = "0.12.1"
crypto-common = "0.1.6"
typenum = "1.19.0"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "pkcs8"] }

[dev-dependencies]
hex-literal = "1.1.0"
base64 = "0.22.1"
