[package]
name = "webauthn_sample"
authors = ["Jun Kurihara"]
description = "Rust version of sample-07-09-rs"
repository = "https://github.com/junkurihara/lecture-security_engineering"
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7" }
anyhow = "1.0.91"
clap = { version = "4.5.20", features = [
  "std",
  "cargo",
  "wrap_help",
  "derive",
] }
rand = "0.8.5"
rustc-hash = "2.0.0"
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["trace", "fs"] }
tower-sessions = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v4"] }
webauthn-rs = { version = "0.5.0", features = [
  "resident-key-support",
  "danger-allow-state-serialisation",
  "preview-features",
] }
axum-macros = "0.4.2"
