[package]
name = "webauthn_sample"
authors = ["Jun Kurihara"]
description = "Rust version of sample-07-09-rs"
repository = "https://github.com/junkurihara/lecture-security_engineering"
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.6" }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = [
  "std",
  "cargo",
  "wrap_help",
  "derive",
] }
rand = "0.9.2"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
webauthn-rs = { version = "0.5.2", features = [
  "resident-key-support",
  "danger-allow-state-serialisation",
  "preview-features",
] }
axum-macros = "0.5.0"
